bangalore changed to Bengaluru

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Curadent - Advanced Dental Care in Bangalore",
+  "name": "Curadent - Advanced Dental Care in Bengaluru",
   "short_name": "Curadent",
-  "description": "Advanced dental care services in Bangalore including general dentistry, cosmetic dentistry, orthodontics, and dental implants",
+  "description": "Advanced dental care services in Bengaluru including general dentistry, cosmetic dentistry, orthodontics, and dental implants",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
